<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TeleopClient</string>
    <string name="action_settings">Settings</string>
    <string name="Close">Close</string>
    <string name="Connect">Connect</string>
    <string name="DataView">DataView</string>
    <string name="Up">Up</string>
    <string name="Right">Right</string>
    <string name="Left">Left</string>
    <string name="Down">Down</string>
    <string name="Stop">Stop</string>
    <string name="IP">IP</string>

</resources>
