<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".teleopclient" >

    <Button
        android:id="@+id/buttonRightTurn"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonDown"
        android:layout_toRightOf="@+id/buttonUp"
        android:text="@string/Right" />

    <Button
        android:id="@+id/buttonLeftTurn"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonUp"
        android:layout_toLeftOf="@+id/buttonDown"
        android:text="@string/Left" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonDown"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/Stop" />

    <Button
        android:id="@+id/buttonUp"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewStatus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/Up" />

    <Button
        android:id="@+id/buttonDown"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLeftTurn"
        android:layout_centerHorizontal="true"
        android:text="@string/Down" />

    <Button
        android:id="@+id/buttonConnect"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="66dp"
        android:layout_toLeftOf="@+id/buttonUp"
        android:text="@string/Connect" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonConnect"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/DataView"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextIPAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonClose"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="text"
        android:text="@string/IP" />

    <Button
        android:id="@+id/buttonClose"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonConnect"
        android:layout_alignBottom="@+id/buttonConnect"
        android:layout_toRightOf="@+id/buttonUp"
        android:text="@string/Close" />

</RelativeLayout>
